--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ajv-errors": "^3.0.0",
     "ajv-formats": "^3.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "4.19.2",
     "jose": "5.2.4",
